tests/ui/link-native-libs/modifiers-override.stderr
error: overriding linking modifiers from command line is not supported
  --> $DIR/modifiers-override.rs:8:1
   |
LL | extern "C" {}
   | ^^^^^^^^^^^^^

error: aborting due to 1 previous error

